# marker

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  action.yml
.github/workflows/: ci.yml  release-build.yml  release-on-tag.yml  release.yml
cargo-marker/: README.md
cargo-marker/src/: error.rs
cargo-marker/src/backend/: driver.rs
docs/book/src/usage/: installation.md  lint-crate-declaration.md
docs/internal/: release.md
marker_adapter/src/: lib.rs  loader.rs
marker_api/: Cargo.toml  README.md
marker_api/src/: context.rs  interface.rs  lib.rs  lint_pass.rs
marker_api/src/context/: map.rs
marker_lints/: README.md
marker_rustc_driver/src/: context.rs  lib.rs  lint_pass.rs
marker_rustc_driver/src/conversion/: marker.rs
marker_uilints/: Cargo.toml
marker_uilints/src/: issues.rs  lib.rs
marker_uilints/src/issues/: issue_301.rs
marker_uilints/tests/: uitest.rs
marker_uilints/tests/ui/issues/: issue_301.rs
marker_uitest/: README.md
marker_utils/: README.md
scripts/: update-toolchain.sh
scripts/release/: get-git-tags.sh  install.ps1  install.sh  set-version.sh  snapshot.diff
