[package]
name = "marker_uilints"

publish = false

edition    = { workspace = true }
license    = { workspace = true }
repository = { workspace = true }
version    = { workspace = true }

[lib]
crate-type = ["cdylib"]

[dependencies]
marker_api = { workspace = true }

[dev-dependencies]
marker_uitest = { workspace = true }

[[test]]
harness = false
name    = "uitest"
